--- a/client/src/components/Pay/style.css
+++ b/client/src/components/Pay/style.css
@@ -1,19 +1,20 @@
 .pay-container {
-    border: solid 2px black;
-    border-radius: 5px;
-    padding: 1em;
+  border: solid 2px black;
+  border-radius: 5px;
+  padding: 1em;
+  margin-bottom: 40px;
 }
 
 .Personal-info {
-    border-right: solid 2px black;
+  border-right: solid 2px black;
 }
 
 td {
-    width: 10em;
+  width: 10em;
 }
 
 th {
-    font-style: italic;
-    font-weight: 500;
-    width: 50px;
+  font-style: italic;
+  font-weight: 500;
+  width: 50px;
 }
