--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,7 +17,7 @@ code {
   margin-left: auto;
   margin-right: auto;
   margin-top: 80px;
-  width: 450px;
+  width: 250px;
   margin-bottom: 80px;
 }
 
@@ -55,6 +55,19 @@ code {
   border-width: 2px;
   border-color: rgb(0, 0, 0);
   background-color: rgb(82, 82, 82);
+}
+
+@media (max-width: 575.98px) {
+  .btn.adminButton {
+    width: 60px;
+    height: 60px;
+    font-size: 10px;
+    padding: 10px;
+    border-radius: 40px;
+    border-width: 2px;
+    border-color: rgb(0, 0, 0);
+    background-color: rgb(82, 82, 82);
+  }
 }
 
 .buttonCol {
